[gd_scene load_steps=12 format=3 uid="uid://d3gicsog4y7bk"]

[ext_resource type="Script" uid="uid://bngm68apw512i" path="res://Scripts/player.gd" id="1_7cwc5"]
[ext_resource type="Texture2D" uid="uid://dyry83ssgis5g" path="res://Assets/Table.jpg" id="1_brlkv"]
[ext_resource type="Script" uid="uid://banxy56nrgm3q" path="res://Scripts/table.gd" id="1_csfaw"]
[ext_resource type="PackedScene" uid="uid://cdc2q67c85bbb" path="res://Scene/deck.tscn" id="2_fw3xl"]
[ext_resource type="PackedScene" uid="uid://ut61nrnralnv" path="res://Scene/outline.tscn" id="5_s1l8t"]
[ext_resource type="Script" uid="uid://cgoyucloc27wj" path="res://Scripts/game_manager.gd" id="7_l2gyp"]
[ext_resource type="Script" uid="uid://b3xgxouvoulyw" path="res://Scripts/opponent_hand.gd" id="8_jete1"]
[ext_resource type="Script" uid="uid://dqx0cra2baa6w" path="res://Scripts/Program.cs" id="9_7y4ci"]
[ext_resource type="Script" uid="uid://bw8poc3cl8ly6" path="res://Scripts/Room.cs" id="9_c2iwn"]
[ext_resource type="Script" uid="uid://bmmnodsbjv3mi" path="res://Scripts/ApplicationUser.cs" id="11_mxd2g"]

[sub_resource type="GDScript" id="GDScript_3pt4j"]
script/source = "extends Node
#
#const HANDS = {
	#\"High_card\": 1,
	#\"One_pair\" : 2,
	#\"Two_pair\" : 3,
	#\"Three_of_a_kind\" : 4,
	#\"Straight\" : 5,
	#\"Flush\" : 6,
	#\"Full_house\" : 7,
	#\"Four_of_a_kind\" : 8,
	#\"Straight_flush\" : 9,
	#\"Royal_flush\" : 10
#}
#
#var table_ref
#var deck_ref
#
#func _ready() -> void:
	#table_ref = $\"../Table\"
	#deck_ref = $\"../Deck\"
	#
#func check_rank(player_hand):
	#var full_hand = player_hand + table_ref.table_cards
	#var full_hand_sorted = sort_hand(full_hand)
	#flush(full_hand_sorted)
	#of_kind(full_hand_sorted)
	#
#func sort_hand(hand):
	##hand = [\"Ace_Clubs\", \"King_Clubs\", \"Queen_Clubs\", \"Jack_Clubs\", \"Ten_Clubs\"]
	#hand = [\"Ace_Clubs\", \"Ace_Diamonds\", \"Queen_Spades\", \"Ten_Hearts\", \"Ten_Clubs\", \"Ten_Diamonds\", \"Ten_Spades\"]
	#var temp_sort_values = []
	#var temp_dict = {}
	#var temp_cards = []
	#
	#for i in range(hand.size()):
		#temp_sort_values.insert(i, deck_ref.deck_full[hand[i]][0])
		#temp_cards.insert(i, hand[i])
#
	#for i in range(temp_sort_values.size()):
		#for j in range(temp_sort_values.size()):
			#if temp_sort_values[j] < temp_sort_values[i]:
				#var temp_value = temp_sort_values[i]
				#var temp_card = temp_cards[i]
				#temp_sort_values[i] =  temp_sort_values[j]
				#temp_cards[i] = temp_cards[j] 
				#temp_sort_values[j] = temp_value
				#temp_cards[j] = temp_card
				#
	#for i in temp_cards:
		#temp_dict[i] = []
		#temp_dict[i] = deck_ref.deck_full[i]
	#return temp_dict
	#
#func flush(hand):
	#var is_flush = true
	#var is_royal = true
	#var first_card = hand.keys()[0]
	#var i = 0
	#for card in hand:
		#if hand[card][0] != ((hand[first_card][0]) - i):
			#is_flush = false
		#if hand[card][1] != hand[first_card][1]:
			#is_royal = false
		#i+=1
	#pass
	#
#func of_kind(hand):
	#var kinds = 0
	#var last_card = hand.keys()[0]
	#for i in (hand.size()):
		#if i+1 < hand.size():
			#last_card = hand.keys()[i+1]
		#else:
			#last_card = \"\"
		#if hand[hand.keys()[i]][0] == hand[last_card][0]:
			#kinds+=1
	#pass
"

[node name="Main" type="Node2D"]

[node name="Table" type="Node2D" parent="."]
script = ExtResource("1_csfaw")

[node name="Background" type="Sprite2D" parent="Table"]
position = Vector2(934, 510)
texture = ExtResource("1_brlkv")

[node name="TableBet" type="RichTextLabel" parent="Table"]
offset_left = 40.0
offset_top = 442.0
offset_right = 100.0
offset_bottom = 482.0
scale = Vector2(3, 3)
text = "0
"
scroll_active = false

[node name="Outlines" type="Node2D" parent="."]

[node name="Outline1" parent="Outlines" instance=ExtResource("5_s1l8t")]
position = Vector2(564, 515)

[node name="Outline2" parent="Outlines" instance=ExtResource("5_s1l8t")]
position = Vector2(746, 515)

[node name="Outline3" parent="Outlines" instance=ExtResource("5_s1l8t")]
position = Vector2(928, 515)

[node name="Outline4" parent="Outlines" instance=ExtResource("5_s1l8t")]
position = Vector2(1110, 515)

[node name="Outline5" parent="Outlines" instance=ExtResource("5_s1l8t")]
position = Vector2(1292, 515)

[node name="StakeLabel" type="RichTextLabel" parent="."]
offset_left = 1518.0
offset_top = 691.0
offset_right = 1598.0
offset_bottom = 731.0
scale = Vector2(4, 4)
text = "0"

[node name="TimerLabel" type="RichTextLabel" parent="."]
offset_left = 1472.0
offset_top = 827.0
offset_right = 1712.0
offset_bottom = 947.0

[node name="TimeoutTimer" type="Timer" parent="."]

[node name="ActionTimer" type="Timer" parent="."]

[node name="Deck" parent="." instance=ExtResource("2_fw3xl")]

[node name="Player" type="Node2D" parent="."]
script = ExtResource("1_7cwc5")

[node name="OpponentHand" type="Node2D" parent="."]
script = ExtResource("8_jete1")

[node name="Call" type="Button" parent="."]
offset_left = 72.0
offset_top = 743.0
offset_right = 152.0
offset_bottom = 783.0
scale = Vector2(3, 3)
disabled = true
text = "Call"

[node name="Fold" type="Button" parent="."]
offset_left = 72.0
offset_top = 899.0
offset_right = 152.0
offset_bottom = 939.0
scale = Vector2(3, 3)
disabled = true
text = "Fold
"

[node name="Raise" type="Button" parent="."]
offset_left = 375.0
offset_top = 743.0
offset_right = 455.0
offset_bottom = 783.0
scale = Vector2(3, 3)
disabled = true
text = "Raise"

[node name="Hands" type="Node" parent="."]
script = SubResource("GDScript_3pt4j")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("7_l2gyp")

[node name="TempTimer" type="Timer" parent="."]

[node name="Add" type="Button" parent="."]
offset_left = 1760.0
offset_top = 891.0
offset_right = 1800.0
offset_bottom = 923.0
scale = Vector2(3, 3)
text = "Add"

[node name="Subtract" type="Button" parent="."]
offset_left = 1160.0
offset_top = 891.0
offset_right = 1234.0
offset_bottom = 923.0
scale = Vector2(3, 3)
text = "Subtract
"

[node name="RaiseLabel" type="RichTextLabel" parent="."]
offset_left = 1490.0
offset_top = 891.0
offset_right = 1550.0
offset_bottom = 931.0
scale = Vector2(3, 3)
text = "0"
scroll_active = false

[node name="HandEvaluator" type="Node" parent="."]
script = ExtResource("9_7y4ci")

[node name="Room" type="Node" parent="HandEvaluator"]
script = ExtResource("9_c2iwn")

[node name="ApplicationUser" type="Node" parent="HandEvaluator"]
script = ExtResource("11_mxd2g")

[connection signal="timeout" from="TimeoutTimer" to="GameManager" method="_on_timeout_timer_timeout"]
[connection signal="pressed" from="Call" to="Player" method="_on_call_pressed"]
[connection signal="pressed" from="Fold" to="Player" method="_on_fold_pressed"]
[connection signal="pressed" from="Raise" to="Player" method="_on_raise_pressed"]
[connection signal="pressed" from="Add" to="Player" method="_on_add_pressed"]
[connection signal="pressed" from="Subtract" to="Player" method="_on_subtract_pressed"]
